--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Yashpal Singh</h1>
       <p>I'm <span class="typed" data-typed-items="UX/UI Designer, UI Developer, Certified Scrum Master, Emerging Product Owner"></span></p>
-      <p>Having 8 years of IT experience & IIM Kozhikode alumni status</p>
+      <p>Having 8 Years of IT Experience & IIM Kozhikode Alumni</p>
       <div class="social-links">
         <!--<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -389,7 +389,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/UX_6.PNG" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
+                <h4>Airport Facial Recognition (Digi yatra Admin Panel)</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/UX_6.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
@@ -403,7 +403,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/bd-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 3</h4>
+                <h4>Smart EV Charging</h4>
                 <p>App</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/bd-2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
@@ -417,7 +417,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/DB_3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 2</h4>
+                <h4>Europe Truck Journey Optimization</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/DB_3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
@@ -431,7 +431,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/UX_5.PNG" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 2</h4>
+                <h4>Airport Facial Recognition (Digi yatra Admin Panel)</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/UX_5.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
@@ -445,7 +445,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/bd-3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 11</h4>
+                <h4>Rustic Elegance</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/bd-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 11"><i class="bx bx-plus"></i></a>
@@ -459,7 +459,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/DB_4.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 1</h4>
+                <h4>Europe Truck Journey Optimization</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/DB_4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
@@ -473,7 +473,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/DB_5.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 3</h4>
+                <h4>Europe Truck Journey Optimization</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/DB_5.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
@@ -487,7 +487,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/DB_6.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 4</h4>
+                <h4>Europe Truck Journey Optimization</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/DB_6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
@@ -501,7 +501,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/DB_7.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 5</h4>
+                <h4>Europe Truck Journey Optimization</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/DB_7.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
@@ -515,7 +515,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/UX_4.PNG" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 1</h4>
+                <h4>Airport Facial Recognition (Digi yatra Admin Panel)</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/UX_4.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
@@ -529,7 +529,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/UX_2.PNG" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 4</h4>
+                <h4>Airport Touchpoint Configurations</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/UX_2.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
@@ -543,7 +543,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/DB_8.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 6</h4>
+                <h4>Europe Truck Journey Optimization</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/DB_8.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
@@ -557,7 +557,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/DB_9.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 7</h4>
+                <h4>Europe Truck Journey Optimization</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/DB_9.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
@@ -571,7 +571,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/DB_10.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 8</h4>
+                <h4>Europe Truck Journey Optimization</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/DB_10.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
@@ -585,7 +585,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/DB_11.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 9</h4>
+                <h4>Europe Truck Journey Optimization</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/DB_11.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
@@ -599,7 +599,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/UX_3.PNG" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 5</h4>
+                <h4>Airport Touchpoint Configurations</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/UX_3.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
@@ -613,7 +613,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/UX_1.PNG" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 6</h4>
+                <h4>DP World - Ship Container Management</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/UX_1.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
@@ -627,7 +627,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/UX_7.PNG" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 7</h4>
+                <h4>COST - Cloud Optimisation</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/UX_7.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
@@ -641,7 +641,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/UX_8.PNG" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 8</h4>
+                <h4>COST - Cloud Optimisation</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/UX_8.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
@@ -655,7 +655,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/UX_9.PNG" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 9</h4>
+                <h4>MigratePro</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/UX_9.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
@@ -669,7 +669,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/UX_10.PNG" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 10</h4>
+                <h4>ArchPro</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/UX_10.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
@@ -683,7 +683,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/bd-6.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 6</h4>
+                <h4>Smart AI Charging</h4>
                 <p>App</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/bd-6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
@@ -697,7 +697,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/bd-9.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 9</h4>
+                <h4>Smart AI Charging</h4>
                 <p>App</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/bd-9.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
@@ -711,7 +711,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/bd-12.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 12</h4>
+                <h4>Smart AI Charging</h4>
                 <p>App</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/bd-12.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
@@ -725,7 +725,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/bd-13.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 13</h4>
+                <h4>Smart AI Charging</h4>
                 <p>App</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/bd-13.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
@@ -739,7 +739,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/bd-14.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 14</h4>
+                <h4>Smart AI Charging</h4>
                 <p>App</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/bd-14.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
@@ -752,7 +752,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/bd-15.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 15</h4>
+                <h4>Smart AI Charging</h4>
                 <p>App</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/bd-15.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
@@ -766,7 +766,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/bd-16.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 16</h4>
+                <h4>Smart AI Charging</h4>
                 <p>App</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/bd-16.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
@@ -780,7 +780,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/bd-10.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 10</h4>
+                <h4>Smart AI Charging</h4>
                 <p>App</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/bd-10.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
@@ -794,7 +794,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/bd-11.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 11</h4>
+                <h4>Smart AI Charging</h4>
                 <p>App</p>
                 <div class="portfolio-links">
                   <a href="img/portfolio/bd-11.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
