--- a/index.html
+++ b/index.html
@@ -880,8 +880,8 @@
                 </svg>
                 <i class="bx bx-slideshow"></i>
               </div>
-              <h4><a href="">SharePoint Designer</a></h4>
-              <p>Contributing in SharePoint by making my projects, documentatins hositing over sharepoint and customising sharepoint according to company need through sharepoint designer and configuring farm and sharepoint search and sites through server.</p>
+              <h4><a href="">SharePoint / Power Automate AI Automations</a></h4>
+              <p>Contributing through Sharepoint utilising AI for automation of organisational tools, documentations hositing and customising sharepoint according to company need with the blend of Power Automate to inject AI fusion for better productivity result.</p>
             </div>
           </div>
 
