--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     </nav><!-- .nav-menu -->
 
   </header><!-- End Header -->
-<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="f9bed6e6-0b12-40e2-894a-8a28908cbaa9" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+<div data-iframe-width="250" data-iframe-height="270" style="position:absolute;left:50px;top:150px" data-share-badge-id="f9bed6e6-0b12-40e2-894a-8a28908cbaa9" data-share-badge-host="https://www.credly.com"></div>
+	<script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
