--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@
     </nav><!-- .nav-menu -->
 
   </header><!-- End Header -->
-<div data-iframe-width="250" data-iframe-height="270" style="position:absolute;left:50px;top:150px" data-share-badge-id="f9bed6e6-0b12-40e2-894a-8a28908cbaa9" data-share-badge-host="https://www.credly.com"></div>
-	<script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
@@ -60,6 +58,8 @@
         <a href="https://www.linkedin.com/in/yash-singh-csm-23768baa/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
+	  <div data-iframe-width="250" data-iframe-height="270" style="position:absolute;left:50px;top:150px" data-share-badge-id="f9bed6e6-0b12-40e2-894a-8a28908cbaa9" data-share-badge-host="https://www.credly.com"></div>
+	<script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
   </section><!-- End Hero -->
 
   <main id="main">
@@ -998,7 +998,7 @@
 
   <!-- Template Main JS File -->
   <script src="js/main.js"></script>
-  <script>
+  <!--<script>
     // disable right click
     document.addEventListener('contextmenu', event => event.preventDefault());
  
@@ -1025,7 +1025,7 @@
         }
     }
  
-</script>
+</script>-->
 
 </body>
 
