--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <a href="https://www.linkedin.com/in/yash-singh-csm-23768baa/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
-	  <div data-iframe-width="250" data-iframe-height="270" style="position:absolute;left:50px;top:150px" data-share-badge-id="f9bed6e6-0b12-40e2-894a-8a28908cbaa9" data-share-badge-host="https://www.credly.com"></div>
+	  <div data-iframe-width="320" data-iframe-height="240" style="position: absolute!important;right: 100px!important;background: #ffffff!important;border-radius: 12px!important;box-shadow: 6px 5px 2px 2px #ede9e9!important;" data-share-badge-id="f9bed6e6-0b12-40e2-894a-8a28908cbaa9" data-share-badge-host="https://www.credly.com"></div>
 	<script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
   </section><!-- End Hero -->
 
@@ -998,7 +998,7 @@
 
   <!-- Template Main JS File -->
   <script src="js/main.js"></script>
-  <!--<script>
+  <script>
     // disable right click
     document.addEventListener('contextmenu', event => event.preventDefault());
  
@@ -1025,7 +1025,7 @@
         }
     }
  
-</script>-->
+</script>
 
 </body>
 
