--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
   </header><!-- End Header -->
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
+	   <div data-iframe-width="320" data-iframe-height="240" style="position: absolute!important;right: 100px!important;background: #ffffff!important;border-radius: 12px!important;box-shadow: 6px 5px 2px 2px #ede9e9!important;" data-share-badge-id="f9bed6e6-0b12-40e2-894a-8a28908cbaa9" data-share-badge-host="https://www.credly.com"></div>
+	<script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Yashpal Singh</h1>
       <p>I'm <span class="typed" data-typed-items="UX/UI Designer, UI Developer, Certified Scrum Master, Emerging Product Owner"></span></p>
@@ -58,8 +60,7 @@
         <a href="https://www.linkedin.com/in/yash-singh-csm-23768baa/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
-	  <div data-iframe-width="320" data-iframe-height="240" style="position: absolute!important;right: 100px!important;background: #ffffff!important;border-radius: 12px!important;box-shadow: 6px 5px 2px 2px #ede9e9!important;" data-share-badge-id="f9bed6e6-0b12-40e2-894a-8a28908cbaa9" data-share-badge-host="https://www.credly.com"></div>
-	<script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+	 
   </section><!-- End Hero -->
 
   <main id="main">
@@ -998,7 +999,7 @@
 
   <!-- Template Main JS File -->
   <script src="js/main.js"></script>
-  <script>
+  <!--<script>
     // disable right click
     document.addEventListener('contextmenu', event => event.preventDefault());
  
@@ -1025,7 +1026,7 @@
         }
     }
  
-</script>
+</script>-->
 
 </body>
 
