--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
   </header><!-- End Header -->
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
-	   <div data-iframe-width="320" data-iframe-height="240" data-iframe-position="absolute" data-share-badge-id="f9bed6e6-0b12-40e2-894a-8a28908cbaa9" data-share-badge-host="https://www.credly.com"></div>
-	<script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+	  
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
+	    <div class="emg"> 
+	  <div data-iframe-width="320" data-iframe-height="240" data-share-badge-id="f9bed6e6-0b12-40e2-894a-8a28908cbaa9" data-share-badge-host="https://www.credly.com"></div>
+	<script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+	  </div>
       <h1>Yashpal Singh</h1>
       <p>I'm <span class="typed" data-typed-items="UX/UI Designer, UI Developer, Certified Scrum Master, Emerging Product Owner"></span></p>
       <p>Having 9 Years of IT Experience & IIM Kozhikode Alumni</p>
