--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <img src="img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Lead UI/UX Designer &amp; Web Developer.</h3>
             <p class="fst-italic">
               Little bit about me.
             </p>
