--- a/portfolio-details_3.html
+++ b/portfolio-details_3.html
@@ -108,6 +108,7 @@
     <li>Admin dashboard to track enrollments, security status, baggage, immigration, and boarding checkpoints.</li>
     <li>Live monitoring, user access control, and alert management system.</li>
   </ul>
+        <br>
 
   <div class="row gy-4">
 
@@ -154,8 +155,7 @@
   <p>These insights helped shape key design decisions including visual clarity, simplified interactions, and real-time dashboard implementation for staff monitoring.</p>
 
   <img src="img/user_research_insights_chart.png" alt="User Research Statistics Chart" />
-
-    <p>Persona Development:</p>
+<h2>Persona Development:</h2>
      <img src="img/user-persona.png" alt="User Persona" />
 
   <h2>Ideation & Testing</h2>
